--- a/style.css
+++ b/style.css
@@ -2,5 +2,6 @@ body {
   background-image: url("sea.jfif");
 }
 table, th, td {
-  border: 1px solid black;
+  border: 1px solid red;
+  border-collapse: collapse;
 }
