--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ table, th, td {
  background-color: lightgreen; 
 }
 .lessons4{
- background-color: lightred; 
+ background-color: red; 
 }
 .lessons5{
- background-color: lightpurple; 
+ background-color: purple; 
 }
