--- a/style2.css
+++ b/style2.css
@@ -2,4 +2,10 @@ body{
   backgroud-color: black;
   color:blue;
 }
-
+input[type=text]{
+  width:100%;
+  padding: 15px 30px;
+  box-sizing: border-box;
+  border: 2px solid orange;
+  border-radius: 20px;
+}
