--- a/style2.css
+++ b/style2.css
@@ -7,4 +7,6 @@ input[type=text]{
   box-sizing: border-box;
   border: 2px solid orange;
   border-radius: 20px;
+  background-color: orange;
+  color: white;
 }
