--- a/style2.css
+++ b/style2.css
@@ -13,6 +13,7 @@ input[type=text]{
 textarea{
  width:50%;
  height: 250px;
+ padding: 10px 20px;
  box-sizing: border-box;
  border:2px dashed green;
   border-radius: 20px;
