--- a/style2.css
+++ b/style2.css
@@ -17,7 +17,7 @@ textarea{
  box-sizing: border-box;
  border:2px dashed green;
   border-radius: 20px;
-  background-color: lightgreen;
+  background-color: #DFDDF6;
   font-size: 12px;
   resize: none;
 }
