--- a/style2.css
+++ b/style2.css
@@ -24,6 +24,7 @@ textarea{
 input[type=submit],input[type=reset]{
   background-color: #433F7C;
   color: #F019A8;
+  padding: 15px 100px;
   text-decoration: wavy underline;
   cursor: pointer;
 }
