--- a/style.css
+++ b/style.css
@@ -38,3 +38,7 @@ p.personal{
 img {
   -webkit-box-reflect: right;
 }
+h1.center{
+ color: white;
+ text-shadow: 10px 10px 20px pink, 0 0 25px red, 0 0 5px purple; 
+}
